parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> bloc
Rule 2     bloc -> statement bloc
Rule 3     bloc -> statement
Rule 4     statement -> instruction SEMICOLON
Rule 5     statement -> instruction
Rule 6     instruction -> expression
Rule 7     instruction -> assignment
Rule 8     instruction -> iterative_exp
Rule 9     instruction -> echo_exp
Rule 10    echo_exp -> ECHO bloc
Rule 11    expression -> boolean_exp
Rule 12    expression -> arithmetic_exp
Rule 13    expression -> conditional_exp
Rule 14    boolean_exp -> boolean_exp AND boolean_exp
Rule 15    boolean_exp -> boolean_exp OR boolean_exp
Rule 16    boolean_exp -> TRUE
Rule 17    boolean_exp -> FALSE
Rule 18    boolean_exp -> variable
Rule 19    boolean_exp -> STRING
Rule 20    boolean_exp -> comparison_exp
Rule 21    boolean_exp -> LPAREN boolean_exp RPAREN
Rule 22    comparison_exp -> arithmetic_exp IS_BIGGER arithmetic_exp
Rule 23    comparison_exp -> arithmetic_exp IS_BIGGER_EQUALS arithmetic_exp
Rule 24    comparison_exp -> arithmetic_exp IS_SMALLER arithmetic_exp
Rule 25    comparison_exp -> arithmetic_exp IS_SMALLER_EQUALS arithmetic_exp
Rule 26    comparison_exp -> arithmetic_exp IS_EQUALS arithmetic_exp
Rule 27    comparison_exp -> arithmetic_exp IS_DIFFERENT arithmetic_exp
Rule 28    comparison_exp -> LPAREN comparison_exp RPAREN
Rule 29    arithmetic_exp -> arithmetic_exp PLUS arithmetic_exp
Rule 30    arithmetic_exp -> arithmetic_exp MINUS arithmetic_exp
Rule 31    arithmetic_exp -> arithmetic_exp TIMES arithmetic_exp
Rule 32    arithmetic_exp -> arithmetic_exp DIVIDE arithmetic_exp
Rule 33    arithmetic_exp -> arithmetic_exp MODULO arithmetic_exp
Rule 34    arithmetic_exp -> LPAREN arithmetic_exp RPAREN
Rule 35    arithmetic_exp -> MINUS arithmetic_exp
Rule 36    arithmetic_exp -> num
Rule 37    arithmetic_exp -> variable
Rule 38    arithmetic_exp -> STRING
Rule 39    num -> NUMBER
Rule 40    num -> float
Rule 41    float -> NUMBER DOT NUMBER
Rule 42    variable -> NAME
Rule 43    assignment -> NAME EQUALS expression
Rule 44    conditional_exp -> IF boolean_exp AT bloc END
Rule 45    conditional_exp -> IF boolean_exp AT bloc ELSE bloc END
Rule 46    iterative_exp -> FOR assignment AT boolean_exp AT bloc AT bloc END
Rule 47    iterative_exp -> FOR assignment boolean_exp bloc AT bloc END
Rule 48    iterative_exp -> WHILE boolean_exp AT bloc END
Rule 49    iterative_exp -> WHILE boolean_exp bloc END

Terminals, with rules where they appear

AND                  : 14
AT                   : 44 45 46 46 46 47 48
DIVIDE               : 32
DOT                  : 41
ECHO                 : 10
ELSE                 : 45
END                  : 44 45 46 47 48 49
EQUALS               : 43
FALSE                : 17
FOR                  : 46 47
IF                   : 44 45
IS_BIGGER            : 22
IS_BIGGER_EQUALS     : 23
IS_DIFFERENT         : 27
IS_EQUALS            : 26
IS_SMALLER           : 24
IS_SMALLER_EQUALS    : 25
LPAREN               : 21 28 34
MINUS                : 30 35
MODULO               : 33
NAME                 : 42 43
NUMBER               : 39 41 41
OR                   : 15
PLUS                 : 29
RPAREN               : 21 28 34
SEMICOLON            : 4
STRING               : 19 38
TIMES                : 31
TRUE                 : 16
WHILE                : 48 49
error                : 

Nonterminals, with rules where they appear

arithmetic_exp       : 12 22 22 23 23 24 24 25 25 26 26 27 27 29 29 30 30 31 31 32 32 33 33 34 35
assignment           : 7 46 47
bloc                 : 1 2 10 44 45 45 46 46 47 47 48 49
boolean_exp          : 11 14 14 15 15 21 44 45 46 47 48 49
comparison_exp       : 20 28
conditional_exp      : 13
echo_exp             : 9
expression           : 6 43
float                : 40
instruction          : 4 5
iterative_exp        : 8
num                  : 36
program              : 0
statement            : 2 3
variable             : 18 37

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . bloc
    (2) bloc -> . statement bloc
    (3) bloc -> . statement
    (4) statement -> . instruction SEMICOLON
    (5) statement -> . instruction
    (6) instruction -> . expression
    (7) instruction -> . assignment
    (8) instruction -> . iterative_exp
    (9) instruction -> . echo_exp
    (11) expression -> . boolean_exp
    (12) expression -> . arithmetic_exp
    (13) expression -> . conditional_exp
    (43) assignment -> . NAME EQUALS expression
    (46) iterative_exp -> . FOR assignment AT boolean_exp AT bloc AT bloc END
    (47) iterative_exp -> . FOR assignment boolean_exp bloc AT bloc END
    (48) iterative_exp -> . WHILE boolean_exp AT bloc END
    (49) iterative_exp -> . WHILE boolean_exp bloc END
    (10) echo_exp -> . ECHO bloc
    (14) boolean_exp -> . boolean_exp AND boolean_exp
    (15) boolean_exp -> . boolean_exp OR boolean_exp
    (16) boolean_exp -> . TRUE
    (17) boolean_exp -> . FALSE
    (18) boolean_exp -> . variable
    (19) boolean_exp -> . STRING
    (20) boolean_exp -> . comparison_exp
    (21) boolean_exp -> . LPAREN boolean_exp RPAREN
    (29) arithmetic_exp -> . arithmetic_exp PLUS arithmetic_exp
    (30) arithmetic_exp -> . arithmetic_exp MINUS arithmetic_exp
    (31) arithmetic_exp -> . arithmetic_exp TIMES arithmetic_exp
    (32) arithmetic_exp -> . arithmetic_exp DIVIDE arithmetic_exp
    (33) arithmetic_exp -> . arithmetic_exp MODULO arithmetic_exp
    (34) arithmetic_exp -> . LPAREN arithmetic_exp RPAREN
    (35) arithmetic_exp -> . MINUS arithmetic_exp
    (36) arithmetic_exp -> . num
    (37) arithmetic_exp -> . variable
    (38) arithmetic_exp -> . STRING
    (44) conditional_exp -> . IF boolean_exp AT bloc END
    (45) conditional_exp -> . IF boolean_exp AT bloc ELSE bloc END
    (42) variable -> . NAME
    (22) comparison_exp -> . arithmetic_exp IS_BIGGER arithmetic_exp
    (23) comparison_exp -> . arithmetic_exp IS_BIGGER_EQUALS arithmetic_exp
    (24) comparison_exp -> . arithmetic_exp IS_SMALLER arithmetic_exp
    (25) comparison_exp -> . arithmetic_exp IS_SMALLER_EQUALS arithmetic_exp
    (26) comparison_exp -> . arithmetic_exp IS_EQUALS arithmetic_exp
    (27) comparison_exp -> . arithmetic_exp IS_DIFFERENT arithmetic_exp
    (28) comparison_exp -> . LPAREN comparison_exp RPAREN
    (39) num -> . NUMBER
    (40) num -> . float
    (41) float -> . NUMBER DOT NUMBER

    NAME            shift and go to state 12
    FOR             shift and go to state 13
    WHILE           shift and go to state 14
    ECHO            shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    STRING          shift and go to state 19
    LPAREN          shift and go to state 21
    MINUS           shift and go to state 22
    IF              shift and go to state 24
    NUMBER          shift and go to state 25

    program                        shift and go to state 1
    bloc                           shift and go to state 2
    statement                      shift and go to state 3
    instruction                    shift and go to state 4
    expression                     shift and go to state 5
    assignment                     shift and go to state 6
    iterative_exp                  shift and go to state 7
    echo_exp                       shift and go to state 8
    boolean_exp                    shift and go to state 9
    arithmetic_exp                 shift and go to state 10
    conditional_exp                shift and go to state 11
    variable                       shift and go to state 18
    comparison_exp                 shift and go to state 20
    num                            shift and go to state 23
    float                          shift and go to state 26

state 1

    (0) S' -> program .



state 2

    (1) program -> bloc .

    $end            reduce using rule 1 (program -> bloc .)


state 3

    (2) bloc -> statement . bloc
    (3) bloc -> statement .
    (2) bloc -> . statement bloc
    (3) bloc -> . statement
    (4) statement -> . instruction SEMICOLON
    (5) statement -> . instruction
    (6) instruction -> . expression
    (7) instruction -> . assignment
    (8) instruction -> . iterative_exp
    (9) instruction -> . echo_exp
    (11) expression -> . boolean_exp
    (12) expression -> . arithmetic_exp
    (13) expression -> . conditional_exp
    (43) assignment -> . NAME EQUALS expression
    (46) iterative_exp -> . FOR assignment AT boolean_exp AT bloc AT bloc END
    (47) iterative_exp -> . FOR assignment boolean_exp bloc AT bloc END
    (48) iterative_exp -> . WHILE boolean_exp AT bloc END
    (49) iterative_exp -> . WHILE boolean_exp bloc END
    (10) echo_exp -> . ECHO bloc
    (14) boolean_exp -> . boolean_exp AND boolean_exp
    (15) boolean_exp -> . boolean_exp OR boolean_exp
    (16) boolean_exp -> . TRUE
    (17) boolean_exp -> . FALSE
    (18) boolean_exp -> . variable
    (19) boolean_exp -> . STRING
    (20) boolean_exp -> . comparison_exp
    (21) boolean_exp -> . LPAREN boolean_exp RPAREN
    (29) arithmetic_exp -> . arithmetic_exp PLUS arithmetic_exp
    (30) arithmetic_exp -> . arithmetic_exp MINUS arithmetic_exp
    (31) arithmetic_exp -> . arithmetic_exp TIMES arithmetic_exp
    (32) arithmetic_exp -> . arithmetic_exp DIVIDE arithmetic_exp
    (33) arithmetic_exp -> . arithmetic_exp MODULO arithmetic_exp
    (34) arithmetic_exp -> . LPAREN arithmetic_exp RPAREN
    (35) arithmetic_exp -> . MINUS arithmetic_exp
    (36) arithmetic_exp -> . num
    (37) arithmetic_exp -> . variable
    (38) arithmetic_exp -> . STRING
    (44) conditional_exp -> . IF boolean_exp AT bloc END
    (45) conditional_exp -> . IF boolean_exp AT bloc ELSE bloc END
    (42) variable -> . NAME
    (22) comparison_exp -> . arithmetic_exp IS_BIGGER arithmetic_exp
    (23) comparison_exp -> . arithmetic_exp IS_BIGGER_EQUALS arithmetic_exp
    (24) comparison_exp -> . arithmetic_exp IS_SMALLER arithmetic_exp
    (25) comparison_exp -> . arithmetic_exp IS_SMALLER_EQUALS arithmetic_exp
    (26) comparison_exp -> . arithmetic_exp IS_EQUALS arithmetic_exp
    (27) comparison_exp -> . arithmetic_exp IS_DIFFERENT arithmetic_exp
    (28) comparison_exp -> . LPAREN comparison_exp RPAREN
    (39) num -> . NUMBER
    (40) num -> . float
    (41) float -> . NUMBER DOT NUMBER

  ! shift/reduce conflict for NAME resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for ECHO resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
    $end            reduce using rule 3 (bloc -> statement .)
    SEMICOLON       reduce using rule 3 (bloc -> statement .)
    END             reduce using rule 3 (bloc -> statement .)
    AT              reduce using rule 3 (bloc -> statement .)
    ELSE            reduce using rule 3 (bloc -> statement .)
    NAME            shift and go to state 12
    FOR             shift and go to state 13
    WHILE           shift and go to state 14
    ECHO            shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    STRING          shift and go to state 19
    LPAREN          shift and go to state 21
    MINUS           shift and go to state 22
    IF              shift and go to state 24
    NUMBER          shift and go to state 25

  ! NAME            [ reduce using rule 3 (bloc -> statement .) ]
  ! FOR             [ reduce using rule 3 (bloc -> statement .) ]
  ! WHILE           [ reduce using rule 3 (bloc -> statement .) ]
  ! ECHO            [ reduce using rule 3 (bloc -> statement .) ]
  ! TRUE            [ reduce using rule 3 (bloc -> statement .) ]
  ! FALSE           [ reduce using rule 3 (bloc -> statement .) ]
  ! STRING          [ reduce using rule 3 (bloc -> statement .) ]
  ! LPAREN          [ reduce using rule 3 (bloc -> statement .) ]
  ! MINUS           [ reduce using rule 3 (bloc -> statement .) ]
  ! IF              [ reduce using rule 3 (bloc -> statement .) ]
  ! NUMBER          [ reduce using rule 3 (bloc -> statement .) ]

    statement                      shift and go to state 3
    bloc                           shift and go to state 27
    instruction                    shift and go to state 4
    expression                     shift and go to state 5
    assignment                     shift and go to state 6
    iterative_exp                  shift and go to state 7
    echo_exp                       shift and go to state 8
    boolean_exp                    shift and go to state 9
    arithmetic_exp                 shift and go to state 10
    conditional_exp                shift and go to state 11
    variable                       shift and go to state 18
    comparison_exp                 shift and go to state 20
    num                            shift and go to state 23
    float                          shift and go to state 26

state 4

    (4) statement -> instruction . SEMICOLON
    (5) statement -> instruction .

  ! shift/reduce conflict for SEMICOLON resolved as shift
    SEMICOLON       shift and go to state 28
    NAME            reduce using rule 5 (statement -> instruction .)
    FOR             reduce using rule 5 (statement -> instruction .)
    WHILE           reduce using rule 5 (statement -> instruction .)
    ECHO            reduce using rule 5 (statement -> instruction .)
    TRUE            reduce using rule 5 (statement -> instruction .)
    FALSE           reduce using rule 5 (statement -> instruction .)
    STRING          reduce using rule 5 (statement -> instruction .)
    LPAREN          reduce using rule 5 (statement -> instruction .)
    MINUS           reduce using rule 5 (statement -> instruction .)
    IF              reduce using rule 5 (statement -> instruction .)
    NUMBER          reduce using rule 5 (statement -> instruction .)
    $end            reduce using rule 5 (statement -> instruction .)
    END             reduce using rule 5 (statement -> instruction .)
    AT              reduce using rule 5 (statement -> instruction .)
    ELSE            reduce using rule 5 (statement -> instruction .)

  ! SEMICOLON       [ reduce using rule 5 (statement -> instruction .) ]


state 5

    (6) instruction -> expression .

    SEMICOLON       reduce using rule 6 (instruction -> expression .)
    NAME            reduce using rule 6 (instruction -> expression .)
    FOR             reduce using rule 6 (instruction -> expression .)
    WHILE           reduce using rule 6 (instruction -> expression .)
    ECHO            reduce using rule 6 (instruction -> expression .)
    TRUE            reduce using rule 6 (instruction -> expression .)
    FALSE           reduce using rule 6 (instruction -> expression .)
    STRING          reduce using rule 6 (instruction -> expression .)
    LPAREN          reduce using rule 6 (instruction -> expression .)
    MINUS           reduce using rule 6 (instruction -> expression .)
    IF              reduce using rule 6 (instruction -> expression .)
    NUMBER          reduce using rule 6 (instruction -> expression .)
    $end            reduce using rule 6 (instruction -> expression .)
    END             reduce using rule 6 (instruction -> expression .)
    AT              reduce using rule 6 (instruction -> expression .)
    ELSE            reduce using rule 6 (instruction -> expression .)


state 6

    (7) instruction -> assignment .

    SEMICOLON       reduce using rule 7 (instruction -> assignment .)
    NAME            reduce using rule 7 (instruction -> assignment .)
    FOR             reduce using rule 7 (instruction -> assignment .)
    WHILE           reduce using rule 7 (instruction -> assignment .)
    ECHO            reduce using rule 7 (instruction -> assignment .)
    TRUE            reduce using rule 7 (instruction -> assignment .)
    FALSE           reduce using rule 7 (instruction -> assignment .)
    STRING          reduce using rule 7 (instruction -> assignment .)
    LPAREN          reduce using rule 7 (instruction -> assignment .)
    MINUS           reduce using rule 7 (instruction -> assignment .)
    IF              reduce using rule 7 (instruction -> assignment .)
    NUMBER          reduce using rule 7 (instruction -> assignment .)
    $end            reduce using rule 7 (instruction -> assignment .)
    END             reduce using rule 7 (instruction -> assignment .)
    AT              reduce using rule 7 (instruction -> assignment .)
    ELSE            reduce using rule 7 (instruction -> assignment .)


state 7

    (8) instruction -> iterative_exp .

    SEMICOLON       reduce using rule 8 (instruction -> iterative_exp .)
    NAME            reduce using rule 8 (instruction -> iterative_exp .)
    FOR             reduce using rule 8 (instruction -> iterative_exp .)
    WHILE           reduce using rule 8 (instruction -> iterative_exp .)
    ECHO            reduce using rule 8 (instruction -> iterative_exp .)
    TRUE            reduce using rule 8 (instruction -> iterative_exp .)
    FALSE           reduce using rule 8 (instruction -> iterative_exp .)
    STRING          reduce using rule 8 (instruction -> iterative_exp .)
    LPAREN          reduce using rule 8 (instruction -> iterative_exp .)
    MINUS           reduce using rule 8 (instruction -> iterative_exp .)
    IF              reduce using rule 8 (instruction -> iterative_exp .)
    NUMBER          reduce using rule 8 (instruction -> iterative_exp .)
    $end            reduce using rule 8 (instruction -> iterative_exp .)
    END             reduce using rule 8 (instruction -> iterative_exp .)
    AT              reduce using rule 8 (instruction -> iterative_exp .)
    ELSE            reduce using rule 8 (instruction -> iterative_exp .)


state 8

    (9) instruction -> echo_exp .

    SEMICOLON       reduce using rule 9 (instruction -> echo_exp .)
    NAME            reduce using rule 9 (instruction -> echo_exp .)
    FOR             reduce using rule 9 (instruction -> echo_exp .)
    WHILE           reduce using rule 9 (instruction -> echo_exp .)
    ECHO            reduce using rule 9 (instruction -> echo_exp .)
    TRUE            reduce using rule 9 (instruction -> echo_exp .)
    FALSE           reduce using rule 9 (instruction -> echo_exp .)
    STRING          reduce using rule 9 (instruction -> echo_exp .)
    LPAREN          reduce using rule 9 (instruction -> echo_exp .)
    MINUS           reduce using rule 9 (instruction -> echo_exp .)
    IF              reduce using rule 9 (instruction -> echo_exp .)
    NUMBER          reduce using rule 9 (instruction -> echo_exp .)
    $end            reduce using rule 9 (instruction -> echo_exp .)
    END             reduce using rule 9 (instruction -> echo_exp .)
    AT              reduce using rule 9 (instruction -> echo_exp .)
    ELSE            reduce using rule 9 (instruction -> echo_exp .)


state 9

    (11) expression -> boolean_exp .
    (14) boolean_exp -> boolean_exp . AND boolean_exp
    (15) boolean_exp -> boolean_exp . OR boolean_exp

    SEMICOLON       reduce using rule 11 (expression -> boolean_exp .)
    NAME            reduce using rule 11 (expression -> boolean_exp .)
    FOR             reduce using rule 11 (expression -> boolean_exp .)
    WHILE           reduce using rule 11 (expression -> boolean_exp .)
    ECHO            reduce using rule 11 (expression -> boolean_exp .)
    TRUE            reduce using rule 11 (expression -> boolean_exp .)
    FALSE           reduce using rule 11 (expression -> boolean_exp .)
    STRING          reduce using rule 11 (expression -> boolean_exp .)
    LPAREN          reduce using rule 11 (expression -> boolean_exp .)
    MINUS           reduce using rule 11 (expression -> boolean_exp .)
    IF              reduce using rule 11 (expression -> boolean_exp .)
    NUMBER          reduce using rule 11 (expression -> boolean_exp .)
    $end            reduce using rule 11 (expression -> boolean_exp .)
    END             reduce using rule 11 (expression -> boolean_exp .)
    AT              reduce using rule 11 (expression -> boolean_exp .)
    ELSE            reduce using rule 11 (expression -> boolean_exp .)
    AND             shift and go to state 29
    OR              shift and go to state 30


state 10

    (12) expression -> arithmetic_exp .
    (29) arithmetic_exp -> arithmetic_exp . PLUS arithmetic_exp
    (30) arithmetic_exp -> arithmetic_exp . MINUS arithmetic_exp
    (31) arithmetic_exp -> arithmetic_exp . TIMES arithmetic_exp
    (32) arithmetic_exp -> arithmetic_exp . DIVIDE arithmetic_exp
    (33) arithmetic_exp -> arithmetic_exp . MODULO arithmetic_exp
    (22) comparison_exp -> arithmetic_exp . IS_BIGGER arithmetic_exp
    (23) comparison_exp -> arithmetic_exp . IS_BIGGER_EQUALS arithmetic_exp
    (24) comparison_exp -> arithmetic_exp . IS_SMALLER arithmetic_exp
    (25) comparison_exp -> arithmetic_exp . IS_SMALLER_EQUALS arithmetic_exp
    (26) comparison_exp -> arithmetic_exp . IS_EQUALS arithmetic_exp
    (27) comparison_exp -> arithmetic_exp . IS_DIFFERENT arithmetic_exp

  ! shift/reduce conflict for MINUS resolved as shift
    SEMICOLON       reduce using rule 12 (expression -> arithmetic_exp .)
    NAME            reduce using rule 12 (expression -> arithmetic_exp .)
    FOR             reduce using rule 12 (expression -> arithmetic_exp .)
    WHILE           reduce using rule 12 (expression -> arithmetic_exp .)
    ECHO            reduce using rule 12 (expression -> arithmetic_exp .)
    TRUE            reduce using rule 12 (expression -> arithmetic_exp .)
    FALSE           reduce using rule 12 (expression -> arithmetic_exp .)
    STRING          reduce using rule 12 (expression -> arithmetic_exp .)
    LPAREN          reduce using rule 12 (expression -> arithmetic_exp .)
    IF              reduce using rule 12 (expression -> arithmetic_exp .)
    NUMBER          reduce using rule 12 (expression -> arithmetic_exp .)
    $end            reduce using rule 12 (expression -> arithmetic_exp .)
    END             reduce using rule 12 (expression -> arithmetic_exp .)
    AT              reduce using rule 12 (expression -> arithmetic_exp .)
    ELSE            reduce using rule 12 (expression -> arithmetic_exp .)
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 34
    MODULO          shift and go to state 35
    IS_BIGGER       shift and go to state 36
    IS_BIGGER_EQUALS shift and go to state 37
    IS_SMALLER      shift and go to state 38
    IS_SMALLER_EQUALS shift and go to state 39
    IS_EQUALS       shift and go to state 40
    IS_DIFFERENT    shift and go to state 41

  ! MINUS           [ reduce using rule 12 (expression -> arithmetic_exp .) ]


state 11

    (13) expression -> conditional_exp .

    SEMICOLON       reduce using rule 13 (expression -> conditional_exp .)
    NAME            reduce using rule 13 (expression -> conditional_exp .)
    FOR             reduce using rule 13 (expression -> conditional_exp .)
    WHILE           reduce using rule 13 (expression -> conditional_exp .)
    ECHO            reduce using rule 13 (expression -> conditional_exp .)
    TRUE            reduce using rule 13 (expression -> conditional_exp .)
    FALSE           reduce using rule 13 (expression -> conditional_exp .)
    STRING          reduce using rule 13 (expression -> conditional_exp .)
    LPAREN          reduce using rule 13 (expression -> conditional_exp .)
    MINUS           reduce using rule 13 (expression -> conditional_exp .)
    IF              reduce using rule 13 (expression -> conditional_exp .)
    NUMBER          reduce using rule 13 (expression -> conditional_exp .)
    $end            reduce using rule 13 (expression -> conditional_exp .)
    END             reduce using rule 13 (expression -> conditional_exp .)
    AT              reduce using rule 13 (expression -> conditional_exp .)
    ELSE            reduce using rule 13 (expression -> conditional_exp .)


state 12

    (43) assignment -> NAME . EQUALS expression
    (42) variable -> NAME .

    EQUALS          shift and go to state 42
    AND             reduce using rule 42 (variable -> NAME .)
    OR              reduce using rule 42 (variable -> NAME .)
    SEMICOLON       reduce using rule 42 (variable -> NAME .)
    NAME            reduce using rule 42 (variable -> NAME .)
    FOR             reduce using rule 42 (variable -> NAME .)
    WHILE           reduce using rule 42 (variable -> NAME .)
    ECHO            reduce using rule 42 (variable -> NAME .)
    TRUE            reduce using rule 42 (variable -> NAME .)
    FALSE           reduce using rule 42 (variable -> NAME .)
    STRING          reduce using rule 42 (variable -> NAME .)
    LPAREN          reduce using rule 42 (variable -> NAME .)
    MINUS           reduce using rule 42 (variable -> NAME .)
    IF              reduce using rule 42 (variable -> NAME .)
    NUMBER          reduce using rule 42 (variable -> NAME .)
    $end            reduce using rule 42 (variable -> NAME .)
    PLUS            reduce using rule 42 (variable -> NAME .)
    TIMES           reduce using rule 42 (variable -> NAME .)
    DIVIDE          reduce using rule 42 (variable -> NAME .)
    MODULO          reduce using rule 42 (variable -> NAME .)
    IS_BIGGER       reduce using rule 42 (variable -> NAME .)
    IS_BIGGER_EQUALS reduce using rule 42 (variable -> NAME .)
    IS_SMALLER      reduce using rule 42 (variable -> NAME .)
    IS_SMALLER_EQUALS reduce using rule 42 (variable -> NAME .)
    IS_EQUALS       reduce using rule 42 (variable -> NAME .)
    IS_DIFFERENT    reduce using rule 42 (variable -> NAME .)
    END             reduce using rule 42 (variable -> NAME .)
    AT              reduce using rule 42 (variable -> NAME .)
    ELSE            reduce using rule 42 (variable -> NAME .)


state 13

    (46) iterative_exp -> FOR . assignment AT boolean_exp AT bloc AT bloc END
    (47) iterative_exp -> FOR . assignment boolean_exp bloc AT bloc END
    (43) assignment -> . NAME EQUALS expression

    NAME            shift and go to state 44

    assignment                     shift and go to state 43

state 14

    (48) iterative_exp -> WHILE . boolean_exp AT bloc END
    (49) iterative_exp -> WHILE . boolean_exp bloc END
    (14) boolean_exp -> . boolean_exp AND boolean_exp
    (15) boolean_exp -> . boolean_exp OR boolean_exp
    (16) boolean_exp -> . TRUE
    (17) boolean_exp -> . FALSE
    (18) boolean_exp -> . variable
    (19) boolean_exp -> . STRING
    (20) boolean_exp -> . comparison_exp
    (21) boolean_exp -> . LPAREN boolean_exp RPAREN
    (42) variable -> . NAME
    (22) comparison_exp -> . arithmetic_exp IS_BIGGER arithmetic_exp
    (23) comparison_exp -> . arithmetic_exp IS_BIGGER_EQUALS arithmetic_exp
    (24) comparison_exp -> . arithmetic_exp IS_SMALLER arithmetic_exp
    (25) comparison_exp -> . arithmetic_exp IS_SMALLER_EQUALS arithmetic_exp
    (26) comparison_exp -> . arithmetic_exp IS_EQUALS arithmetic_exp
    (27) comparison_exp -> . arithmetic_exp IS_DIFFERENT arithmetic_exp
    (28) comparison_exp -> . LPAREN comparison_exp RPAREN
    (29) arithmetic_exp -> . arithmetic_exp PLUS arithmetic_exp
    (30) arithmetic_exp -> . arithmetic_exp MINUS arithmetic_exp
    (31) arithmetic_exp -> . arithmetic_exp TIMES arithmetic_exp
    (32) arithmetic_exp -> . arithmetic_exp DIVIDE arithmetic_exp
    (33) arithmetic_exp -> . arithmetic_exp MODULO arithmetic_exp
    (34) arithmetic_exp -> . LPAREN arithmetic_exp RPAREN
    (35) arithmetic_exp -> . MINUS arithmetic_exp
    (36) arithmetic_exp -> . num
    (37) arithmetic_exp -> . variable
    (38) arithmetic_exp -> . STRING
    (39) num -> . NUMBER
    (40) num -> . float
    (41) float -> . NUMBER DOT NUMBER

    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    STRING          shift and go to state 19
    LPAREN          shift and go to state 46
    NAME            shift and go to state 47
    MINUS           shift and go to state 22
    NUMBER          shift and go to state 25

    boolean_exp                    shift and go to state 45
    variable                       shift and go to state 18
    comparison_exp                 shift and go to state 20
    arithmetic_exp                 shift and go to state 48
    num                            shift and go to state 23
    float                          shift and go to state 26

state 15

    (10) echo_exp -> ECHO . bloc
    (2) bloc -> . statement bloc
    (3) bloc -> . statement
    (4) statement -> . instruction SEMICOLON
    (5) statement -> . instruction
    (6) instruction -> . expression
    (7) instruction -> . assignment
    (8) instruction -> . iterative_exp
    (9) instruction -> . echo_exp
    (11) expression -> . boolean_exp
    (12) expression -> . arithmetic_exp
    (13) expression -> . conditional_exp
    (43) assignment -> . NAME EQUALS expression
    (46) iterative_exp -> . FOR assignment AT boolean_exp AT bloc AT bloc END
    (47) iterative_exp -> . FOR assignment boolean_exp bloc AT bloc END
    (48) iterative_exp -> . WHILE boolean_exp AT bloc END
    (49) iterative_exp -> . WHILE boolean_exp bloc END
    (10) echo_exp -> . ECHO bloc
    (14) boolean_exp -> . boolean_exp AND boolean_exp
    (15) boolean_exp -> . boolean_exp OR boolean_exp
    (16) boolean_exp -> . TRUE
    (17) boolean_exp -> . FALSE
    (18) boolean_exp -> . variable
    (19) boolean_exp -> . STRING
    (20) boolean_exp -> . comparison_exp
    (21) boolean_exp -> . LPAREN boolean_exp RPAREN
    (29) arithmetic_exp -> . arithmetic_exp PLUS arithmetic_exp
    (30) arithmetic_exp -> . arithmetic_exp MINUS arithmetic_exp
    (31) arithmetic_exp -> . arithmetic_exp TIMES arithmetic_exp
    (32) arithmetic_exp -> . arithmetic_exp DIVIDE arithmetic_exp
    (33) arithmetic_exp -> . arithmetic_exp MODULO arithmetic_exp
    (34) arithmetic_exp -> . LPAREN arithmetic_exp RPAREN
    (35) arithmetic_exp -> . MINUS arithmetic_exp
    (36) arithmetic_exp -> . num
    (37) arithmetic_exp -> . variable
    (38) arithmetic_exp -> . STRING
    (44) conditional_exp -> . IF boolean_exp AT bloc END
    (45) conditional_exp -> . IF boolean_exp AT bloc ELSE bloc END
    (42) variable -> . NAME
    (22) comparison_exp -> . arithmetic_exp IS_BIGGER arithmetic_exp
    (23) comparison_exp -> . arithmetic_exp IS_BIGGER_EQUALS arithmetic_exp
    (24) comparison_exp -> . arithmetic_exp IS_SMALLER arithmetic_exp
    (25) comparison_exp -> . arithmetic_exp IS_SMALLER_EQUALS arithmetic_exp
    (26) comparison_exp -> . arithmetic_exp IS_EQUALS arithmetic_exp
    (27) comparison_exp -> . arithmetic_exp IS_DIFFERENT arithmetic_exp
    (28) comparison_exp -> . LPAREN comparison_exp RPAREN
    (39) num -> . NUMBER
    (40) num -> . float
    (41) float -> . NUMBER DOT NUMBER

    NAME            shift and go to state 12
    FOR             shift and go to state 13
    WHILE           shift and go to state 14
    ECHO            shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    STRING          shift and go to state 19
    LPAREN          shift and go to state 21
    MINUS           shift and go to state 22
    IF              shift and go to state 24
    NUMBER          shift and go to state 25

    bloc                           shift and go to state 49
    statement                      shift and go to state 3
    instruction                    shift and go to state 4
    expression                     shift and go to state 5
    assignment                     shift and go to state 6
    iterative_exp                  shift and go to state 7
    echo_exp                       shift and go to state 8
    boolean_exp                    shift and go to state 9
    arithmetic_exp                 shift and go to state 10
    conditional_exp                shift and go to state 11
    variable                       shift and go to state 18
    comparison_exp                 shift and go to state 20
    num                            shift and go to state 23
    float                          shift and go to state 26

state 16

    (16) boolean_exp -> TRUE .
